--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <ul class="nav navbar-nav ">
           <li><a href="./index.html" title="" style="color: white;">Home</a></li>
           <li><a href="./answers.html" title="" style="color: white;">Answers</a></li>
+          <li><a href="./platform.html" title="" style="color: white;">Platform</a></li>
           <li><a href="./contact.html" title="" style="color: white;">Contact</a></li>
           
         </ul>
