--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,7 @@
         <ul class="nav navbar-nav ">
           <li><a href="./index.html" title="">Home</a></li>
           <li><a href="./answers.html" title="">Answers</a></li>
+          <li><a href="./platform.html" title="">Platform</a></li>
           <li><a href="./contact.html" title="">Contact</a></li>
           
         </ul>
