--- a/whyfit.html
+++ b/whyfit.html
@@ -38,7 +38,8 @@
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
           <li><a href="./index.html" title="">Home</a></li>
-          <li><a href="./answers.html" title="">Answers</a></li>          
+          <li><a href="./answers.html" title="">Answers</a></li>
+          <li><a href="./platform.html" title="">Platform</a></li>          
           <li><a href="./contact.html" title="">Contact</a></li>
          
         </ul>
@@ -94,6 +95,6 @@
 
 
 
---> <script type="text/javascript" src="./main.70a66962.js"></script></body>
+<script type="text/javascript" src="./main.70a66962.js"></script></body>
 
 </html>
